Changelog
===========

0.3.7 (unreleased)
------------------

- Nothing changed yet.


0.3.6 (2013-11-21)
------------------

- Fixed a syntax error in Python 3 that was introduced in 0.3.5.  This
  could occur very early in the setup such that it bailed before even 2to3
  could run on the rest of the package.


0.3.5 (2013-11-18)
------------------

- Fixed an obscure issue that could occur when trying to install with
  easy_install on Python 2 systems that have lib2to3 installed but have never
  used it.


0.3.4 (2013-07-31)
------------------

- Updated the check for ``__loader__`` added in v0.3.3 to only perform
  that check on Python >= 3.3, since the issue doesn't apply to older
  Python versions.


0.3.3 (2013-07-25)
------------------

- Updated the import-time SVN revision update mechanism in the ``version.py``
  module generated by the ``version_setup_hook`` to avoid running when not in
  a dev version of the package.  This saves time on importing released
  packages when installed on users' systems.

- Added a workaround to a bug on Python 3.3 that could cause stsci.distutils
  to crash during installation.


0.3.2 (2013-03-27)
------------------

- Fixed a bug in the version hook that could occur if the svnversion command
  fails.

- Updated the template for the version.py module generated by the version hook
  so that ``from .version import *`` will work for applications.

- Added a ``__vdate__`` variable in version.py which may contain a release
  date string by specifying a ``vdate`` option in the ``[metadata]`` section
  of setup.cfg.

- Added a ``stsci_distutils_version`` variable in version.py containing the
  version of stsci.distutils used to generate the file--useful primarily for
  debugging purposes.

- Version 0.3.1 added a new zest.releaser hooks to ensure that source
  distributes are created as tar.gz files instead of zip files--this was left
  out of the changelog for 0.3.1.
